# homeworks_netology

./: .gitignore  README.md
 Multi-file_projects_libraries/6_1/: main.cpp  math_func.h
 Multi-file_projects_libraries/6_2/: CMakeLists.txt  classCounter.cpp  classCounter.h  main.cpp
 Multi-file_projects_libraries/6_3/: CMakeLists.txt  main.cpp
 smart_pointers/1/: 1.cpp
 smart_pointers/2/: 2.cpp
 smart_pointers/3/: 3.cpp  CMakeLists.txt
Async/1/: CMakeLists.txt  main.cpp
Async/2/: CMakeLists.txt  main.cpp
Behavioral_patterns/1/: main.cpp
Behavioral_patterns/2/: main.cpp
Behavioral_patterns/3/: main.cpp
CMake/10_1/: CMakeLists.txt  main.cpp
CMake/10_2/: CMakeLists.txt  main.cpp
Competition_ state_of_racing/1/: CMakeLists.txt  main.cpp
Competition_ state_of_racing/2/: main.cpp
Generative_patterns/: CMakeLists.txt  main.cpp
Qt_main_modules/: CMakeLists.txt  main.cpp
RAII/: 1.cpp  2.cpp
Solid_DRY/: CMakeLists.txt  main.cpp
compilation and linking/: 1.cpp  CMakeLists.txt
designer/: CMakeLists.txt  dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
docker/2/: CMakeLists.txt  Dockerfile
docker/2/Shape/: shape.cpp  shape.h
docker/2/Shape/Inherited_figures/Cube/: Cube.cpp
docker/2/Shape/Inherited_figures/Cylinder/: Cylinder.cpp
docker/2/Shape/Inherited_figures/Line/: Line.h
docker/2/Shape/Inherited_figures/Square/: Square.cpp
homework_enum_struct/: first.cpp  second.cpp  third.cpp
hw_class/: 3_1.cpp  3_2.cpp
postgress/: CMakeLists.txt  main.cpp
stl_1/1/: 1.cpp  (+1 more)
widgets/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
(+128 files in other folders)
